--- a/packages/hygen-oja-generators/package.json
+++ b/packages/hygen-oja-generators/package.json
@@ -30,6 +30,6 @@
     "shelljs": "^0.8.3"
   },
   "publishConfig": {
-    "registry": "https://npm.corp.ebay.com"
+    "registry": "https://registry.npmjs.org"
   }
 }
