--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -4,9 +4,10 @@
   "description": "Example of structuring app business logic using oja action with dependency injection",
   "main": "index.js",
   "scripts": {
-    "test": "yarn jest src",
+    "test": "jest src",
     "coverage": "yarn jest --collect-coverage src",
-    "lint": "eslint --quiet -c .eslintrc *.js",
+    "elint": "eslint --quiet -c .eslintrc *.js",
+    "lint": "yarn ojalint && yarn elint",
     "lint-fix": "eslint --fix *.js"
   },
   "keywords": [
@@ -33,6 +34,9 @@
   },
   "devDependencies": {
     "@marko/jest": "^2.1.0",
+    "eslint": "^5.16.0",
+    "eslint-config-ebay": "^1.0.0",
+    "eslint-plugin-mocha": "^5.3.0",
     "jest": "^24.9.0"
   },
   "engines": {
