added extension action and got rid of yarn install in unit tests
all test pass now via lerna

--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
     "lerna": "^3.18.1"
+  },
+  "scripts": {
+    "clean": "lerna exec -- rm -rf ./node_modules",
+    "bootstrap": "lerna bootstrap",
+    "test": "lerna exec -- yarn test"
   }
 }
