--- a/packages/oja-linter/package.json
+++ b/packages/oja-linter/package.json
@@ -7,8 +7,8 @@
     "ojalint": "./bin/lint"
   },
   "scripts": {
-    "test": "yarn jest __tests__/*.js",
-    "coverage": "yarn jest --collect-coverage __tests__/*.js",
+    "test": "jest __tests__/*.js",
+    "coverage": "jest --collect-coverage __tests__/*.js",
     "lint": "eslint --quiet -c .eslintrc **/*.js *.js",
     "lint-fix": "eslint --fix **/*.js *.js"
   },
