--- a/packages/hygen-oja-generators/.eslintrc
+++ b/packages/hygen-oja-generators/.eslintrc
@@ -5,9 +5,7 @@
       "es6": true
     },
     "parserOptions": {
-      "ecmaFeatures": {
-          "experimentalObjectRestSpread": true
-      }
+      "ecmaVersion": 9
     },
     "rules": {
       "space-before-function-paren": ["error", {"anonymous": "always", "named": "never", "asyncArrow": "always"}],
