--- a/packages/hygen-oja-generators/package.json
+++ b/packages/hygen-oja-generators/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test jest __tests__/*.js",
-    "coverage": "yarn jest --collect-coverage __tests__/*.js",
+    "coverage": "jest --collect-coverage __tests__/*.js",
     "lint": "eslint --quiet -c .eslintrc .",
     "lint-fix": "eslint --fix --quiet -c .eslintrc ."
   },
