--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ node_js:
 - "12"
 language: node_js
 before_install: "npm i -g yarn@latest"
-install: "yarn bootstrap"
+install: "yarn && yarn bootstrap"
 script: "yarn lint && yarn test"
 after_success: "yarn coverage"
