--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 node_js:
-- "10"
-- "12"
+  - "10"
+  - "12"
 language: node_js
-before_install: "npm i -g yarn@latest"
-install: "yarn && yarn bootstrap"
-script: "yarn lint && yarn test"
-after_success: "yarn coverage"
+before_install:
+  - npm i -g yarn@latest codecov@latest lerna
+install:
+  - yarn && yarn bootstrap
+script:
+  - yarn lint && yarn test
+after_success:
+  - yarn coverage
+  - lerna exec -- codecov
