--- a/packages/oja-context/package.json
+++ b/packages/oja-context/package.json
@@ -22,9 +22,9 @@
   "author": "Dmytro Semenov <dsemenov@ebay.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dimichgh/oja/issues"
+    "url": "https://github.com/eBay/oja/issues"
   },
-  "homepage": "https://github.com/eBay/oja/blob/master/packages/oja-context/README.md",
+  "homepage": "https://github.com/eBay/oja/blob/master/packages/oja-context#readme",
   "devDependencies": {
     "async": "^2.5.0",
     "eslint": "^5.16.0",
@@ -44,5 +44,8 @@
       "<rootDir>/*\\.js"
     ],
     "clearMocks": true
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
