--- a/packages/oja-tools/package.json
+++ b/packages/oja-tools/package.json
@@ -48,5 +48,8 @@
     "collectCoverageFrom" : [
       "<rootDir>/*\\.js"
     ]
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
