fixed: should cache contextualized action per its resolved location

--- a/packages/oja-action/package.json
+++ b/packages/oja-action/package.json
@@ -4,7 +4,7 @@
   "description": "Dependency injection via actions",
   "main": "index.js",
   "scripts": {
-    "test": "jest -i __tests__/*.js",
+    "test": "jest __tests__/*.js",
     "coverage": "jest --collect-coverage __tests__/*.js",
     "lint": "eslint --quiet -c .eslintrc **/*.js",
     "lint-fix": "eslint --fix **/*.js"
