--- a/packages/oja-action/package.json
+++ b/packages/oja-action/package.json
@@ -31,7 +31,8 @@
     "eslint-config-ebay": "^1.1.1",
     "eslint-plugin-mocha": "^5.3.0",
     "jest": "^24.9.0",
-    "shelljs": "^0.8.3"
+    "shelljs": "^0.8.3",
+    "@ebay/oja-context": "^2"
   },
   "dependencies": {
     "caller": "^1.0.1",
@@ -39,7 +40,6 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "^@ebay/oja-context$": "<rootDir>/../oja-context/index.js",
       "^@ebay/oja-action$": "<rootDir>/index.js",
       "^@ebay/oja-action/resolver$": "<rootDir>/resolver.js",
       "^external-action$": "<rootDir>/__tests__/fixtures/external-action/index.js",
