--- a/packages/oja-pubsub/package.json
+++ b/packages/oja-pubsub/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@ebay/oja-pubsub",
   "version": "2.0.0",
-  "description": "Instrumentation of actions via hooks",
-  "main": "index.js",
+  "description": "Organizing actions into pubblishers and subscribers",
+  "main": "pubsub.js",
   "scripts": {
     "test": "jest __tests__/*.js",
     "coverage": "jest --collect-coverage __tests__/*.js",
@@ -14,12 +14,10 @@
     "url": "git+https://github.com/eBay/oja/tree/master/packages/oja.git"
   },
   "keywords": [
-    "dependency",
-    "injection",
-    "context",
-    "structure",
-    "hooks",
-    "instrumentation"
+    "pubsub",
+    "publisher",
+    "subscriber",
+    "structure"
   ],
   "author": "Dmytro Semenov <dsemenov@ebay.com>",
   "license": "MIT",
@@ -34,20 +32,10 @@
     "eslint-plugin-mocha": "^5.3.0",
     "shelljs": "^0.8.3",
     "jest": "^24.9.0",
-    "@ebay/oja-linter": "^2"
-  },
-  "dependencies": {
+    "@ebay/oja-linter": "^2",
+
     "@ebay/oja-context": "^2",
     "@ebay/oja-action": "^2"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "^@ebay/oja-context$": "<rootDir>/../oja-context/index.js",
-      "^@ebay/oja-action$": "<rootDir>/../oja-action/index.js"
-    },
-    "collectCoverageFrom" : [
-      "<rootDir>/*\\.js"
-    ]
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
