--- a/packages/oja-linter/package.json
+++ b/packages/oja-linter/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eBay/oja/tree/master/packages/oja.git"
+    "url": "git+https://github.com/eBay/oja.git"
   },
   "keywords": [
     "dependency",
