--- a/packages/oja-pubsub/package.json
+++ b/packages/oja-pubsub/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eBay/oja/tree/master/packages/oja.git"
+    "url": "git+https://github.com/eBay/oja.git"
   },
   "keywords": [
     "pubsub",
