--- a/packages/oja-action/package.json
+++ b/packages/oja-action/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ebay/oja-action",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Dependency injection via actions",
   "main": "index.js",
   "scripts": {
@@ -26,13 +26,13 @@
   },
   "homepage": "https://github.com/eBay/oja/blob/master/packages/oja-action#readme",
   "devDependencies": {
+    "@ebay/oja-context": "^2.0.1",
     "async": "^2.6.3",
     "eslint": "^5.16.0",
     "eslint-config-ebay": "^1.1.1",
     "eslint-plugin-mocha": "^5.3.0",
     "jest": "^24.9.0",
-    "shelljs": "^0.8.3",
-    "@ebay/oja-context": "^2"
+    "shelljs": "^0.8.3"
   },
   "dependencies": {
     "caller": "^1.0.1",
