--- a/packages/hygen-oja-generators/package.json
+++ b/packages/hygen-oja-generators/package.json
@@ -32,5 +32,8 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
+  },
+  "dependencies": {
+    "relative": "^3.0.2"
   }
 }
