lint fixes for oja-flow tests

--- a/packages/oja-flow/package.json
+++ b/packages/oja-flow/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest __tests__/*.js",
     "coverage": "jest --collect-coverage __tests__/*.js",
-    "lint": "eslint --quiet -c .eslintrc *.js",
-    "lint-fix": "eslint --fix *.js"
+    "lint": "eslint --quiet -c .eslintrc *.js **/*.js",
+    "lint-fix": "eslint --fix *.js **/*.js"
   },
   "repository": {
     "type": "git",
