--- a/packages/hygen-oja-generators/package.json
+++ b/packages/hygen-oja-generators/package.json
@@ -27,13 +27,13 @@
     "eslint-config-ebay": "^1.0.0",
     "eslint-plugin-mocha": "^5.3.0",
     "hygen": "^4.0.11",
-    "jest": "^24.9.0",
-    "shelljs": "^0.8.3"
+    "jest": "^24.9.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "relative": "^3.0.2"
+    "relative": "^3.0.2",
+    "shelljs": "^0.8.3"
   }
 }
