--- a/packages/oja-linter/package.json
+++ b/packages/oja-linter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ebay/oja-linter",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Instrumentation of actions via hooks",
   "main": "index.js",
   "bin": {
@@ -31,14 +31,14 @@
   },
   "homepage": "https://github.com/eBay/oja/tree/master/packages/oja-linter#readme",
   "devDependencies": {
+    "@ebay/oja-action": "^2",
+    "@ebay/oja-context": "^2",
     "async": "^2.6.3",
     "eslint": "^5.16.0",
     "eslint-config-ebay": "^1.0.0",
     "eslint-plugin-mocha": "^5.3.0",
     "jest": "^24.9.0",
-    "shelljs": "^0.8.3",
-    "@ebay/oja-action": "^2",
-    "@ebay/oja-context": "^2"
+    "shelljs": "^0.8.3"
   },
   "jest": {
     "moduleNameMapper": {
