--- a/packages/oja-workers/package.json
+++ b/packages/oja-workers/package.json
@@ -1,54 +1,46 @@
 {
-  "name": "@ebay/oja-linter",
-  "version": "2.0.3",
-  "description": "Instrumentation of actions via hooks",
+  "name": "@ebay/oja-workers",
+  "version": "2.0.5",
+  "description": "Organizing actions into action workers pool",
   "main": "index.js",
-  "bin": {
-    "ojalint": "./bin/lint"
-  },
   "scripts": {
     "test": "jest __tests__/*.js",
     "coverage": "jest --collect-coverage __tests__/*.js",
-    "lint": "eslint --quiet -c .eslintrc **/*.js *.js",
-    "lint-fix": "eslint --fix **/*.js *.js"
+    "lint": "eslint --quiet -c .eslintrc *.js",
+    "lint-fix": "eslint --fix *.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/eBay/oja.git"
   },
   "keywords": [
+    "workers",
+    "pool",
     "dependency",
     "injection",
-    "context",
-    "structure",
-    "hooks",
-    "instrumentation"
+    "parallel",
+    "action"
   ],
   "author": "Dmytro Semenov <dsemenov@ebay.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/eBay/oja/issues"
   },
-  "homepage": "https://github.com/eBay/oja/tree/master/packages/oja-linter#readme",
+  "homepage": "https://github.com/eBay/oja/blob/master/packages/oja-pubsub#readme",
   "devDependencies": {
-    "@ebay/oja-action": "^2",
-    "@ebay/oja-context": "^2",
-    "async": "^2.6.3",
+    "@ebay/oja-action": "^2.0.4",
+    "@ebay/oja-context": "^2.0.2",
+    "@ebay/oja-linter": "^2.0.3",
     "eslint": "^5.16.0",
     "eslint-config-ebay": "^1.0.0",
     "eslint-plugin-mocha": "^5.3.0",
     "jest": "^24.9.0",
     "shelljs": "^0.8.3"
   },
-  "jest": {
-    "moduleNameMapper": {
-      "^@ebay/oja-linter$": "<rootDir>/index.js"
-    },
-    "collectCoverageFrom": [
-      "<rootDir>/*\\.js"
-    ]
-  },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
+  },
+  "dependencies": {
+    "aggregate-error": "^3.0.1"
   }
 }
